<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yahboomcar</name>
  <version>0.0.1</version>
  <description>ROS2 package for Yahboomcar robot control, sensors, and simulation integration.</description>
  <maintainer email="your.email@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>geometry_msgs</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>joy</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>robot_localization</depend>
  <depend>robot_state_publisher</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>